# kitchen-planner

./: .envrc  .gitignore  Cargo.toml  Justfile  README.org  flake.nix  opencode.json  rust-toolchain.toml  shell.nix  tsconfig.json
.config/: bacon.toml  nextest.toml  server.toml
assets/: app.js  gantt.html  gantt.js  index.html  style.css
data/: kitchen.json  kitchen.ron
data/cooks/: alice.json  alice.ron  bob.json  bob.ron  charlie.json  charlie.ron  diana.json  diana.ron
data/kitchens/: large.ron  simple.ron
data/recipes/: garlic-bread.json  garlic-bread.ron  lasagna.json  lasagna.ron  mashed-potatoes.ron
docs/: architecture.org  conventions.org  data-model.org  development.org  renderer.org  roadmap.org  solver.org
src/: cook.rs  io.rs  kitchen.rs  lib.rs  model.mzn  mzn_solver.rs  plan.rs  recipe.rs  render.rs  schedule.rs  validate.rs  web.rs
src/models/: cook.rs  kitchen.rs  plan.rs  recipe.rs
src/render/: html.rs  mod.rs  text.rs
tests/: web.rs
