[package]
name = "kitchen-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
googletest = "0.14.2"
ron = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.18"
